fix: refine location save button visibility

--- a/store/src/styles/components/refineLocation.scss
+++ b/store/src/styles/components/refineLocation.scss
@@ -34,6 +34,7 @@
    margin-top: 4px;
    // height: 26.5rem;
    overflow: auto;
+   // height: 220px;
 }
 .hern-refine-location__address-form-field {
    width: 100%;
@@ -55,6 +56,12 @@
    width: 100%;
    position: sticky;
    bottom: 0;
+   @media (max-width: 480px) {
+      position: fixed;
+      left: 5%;
+      width: 90%;
+      bottom: 0;
+   }
    height: 40px;
 }
 .hern-refine-location__no-store-available {
